Enricht FilterModelSchemaTransformer with descriptions and samples
